-#6755 Habilito el campo traductor para artículos. Conecto collaborator y translator con las autorithies.

--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -1747,6 +1747,16 @@ choices.presentation.sedici.contributor.juror = suggest
 authority.controlled.sedici.contributor.juror = true
 choices.closed.sedici.contributor.juror = false
 
+choices.plugin.sedici.contributor.colaborator = AuthorAuthority
+choices.presentation.sedici.contributor.colaborator = suggest
+authority.controlled.sedici.contributor.colaborator = true
+choices.closed.sedici.contributor.colaborator = false
+
+choices.plugin.sedici.contributor.translator = AuthorAuthority
+choices.presentation.sedici.contributor.translator = suggest
+authority.controlled.sedici.contributor.translator = true
+choices.closed.sedici.contributor.translator = false
+
 ##
 ## Las siguiente propiedades son solo validas para los plugins SeDiCI2003Jerarquia y SeDiCI2003Tesauro
 ## sedici.choices.jerarquias.filter.* : lista separada por comas con los ID de los padres considerados en las busquedas
