Actualizo Makefile para prune con el docker-compose-debug

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -47,7 +47,7 @@ stop:
 
 prune:
 	@echo "Removing containers for $(PROJECT_NAME)..."
-	@docker-compose down -v
+	@docker-compose -f docker-compose.yml -f others/docker-compose-debug.yml down
 
 ps:
 	@docker ps --filter name='$(PROJECT_NAME)*'
