--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,22 +1,17 @@
 version: "3.7"
-#networks:
-#  default:
-#    external:
-#      name: ${DOCKER_EXTERNAL_NETWORK_NAME}
+
 services:
-  db:
-    container_name: dspace_db_${PROJECT_NAME}
+  dspacedb:
     image: postgres:9.5-alpine
     environment:
-      POSTGRES_DB: "dspace_${PROJECT_NAME}"
+      POSTGRES_DB: "dspace"
       POSTGRES_USER: dspace
       POSTGRES_PASSWORD: dspace
     volumes:
       - pgdata:/var/lib/postgresql/data
       
   dspace:
-    container_name: dspace_${PROJECT_NAME}
-    image: dspace:dspace_${PROJECT_NAME}_latest
+    image: dspace:dspace_${COMPOSE_PROJECT_NAME}_latest
     build:
       context: ./
       dockerfile: Dockerfile.sedici
@@ -24,20 +19,19 @@ services:
     environment:
       CATALINA_OPTS: "-Xmx1024m -Xms512m -XX:MaxPermSize=256m"
       DSPACE_WEBAPPS: "${DSPACE_WEBAPPS}" # posible values: "jspui xmlui  mirage2 rest oai rdf sword swordv2"
+      DSPACE_WEBAPPS: "${DSPACE_WEBAPPS}" # posible values: "mirage2 rest oai rdf sword swordv2"
       DSPACE_ROOT_WEBAPP: "${DSPACE_ROOT_WEBAPP}"
-      POSTGRES_DB_HOST: "dspace_db_${PROJECT_NAME}"
-      POSTGRES_DB_NAME: "dspace_${PROJECT_NAME}"
+      POSTGRES_DB_HOST: "dspacedb"
+      POSTGRES_DB_NAME: "dspace"
       DSPACE_USER: dspace
-      DSPACE_PASS: dspace
     volumes:
       - ../:/dspace/
       - ~/.m2/:/dspace/.m2/
     ports:
       - "8080:8080"
     depends_on: 
-      - db
+      - dspacedb
   dspacesolr:
-    container_name: dspacesolr_${PROJECT_NAME}
     image: dspace/dspace-solr
     ports:
     - published: 8983
