Ahora la docker external network es opcional
Solo activarla cuando se levanta el proyecto de forma local en
desarrollo junto a DSpace-Angular. En ste caso, dspace-angular tendria
que contectarse a la misma red que la red externa declarada por
dspace-docker.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
-networks:
-  default:
-    name: ${DOCKER_EXTERNAL_NETWORK_NAME}
+#networks:
+#  default:
+#    name: ${DOCKER_EXTERNAL_NETWORK_NAME}
 services:
   dspacedb:
     image: postgres:9.5-alpine
