Corrijo los metadata.hide.sedici2003
Porque habia agregado un ";" final erroneamente.

--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -823,86 +823,86 @@ webui.licence_bundle.show = false
 # private and is mainly of interest to administrators:
 metadata.hide.dc.description.provenance = true
 #metadata.hide.sedici2003.identifier = true;
-metadata.hide.sedici2003.padre = true;
-metadata.hide.sedici2003.abstract = true;
-metadata.hide.sedici2003.pais = true;
-metadata.hide.sedici2003.institucion = true;
-metadata.hide.sedici2003.dependencia = true;
-metadata.hide.sedici2003.unidad = true;
-metadata.hide.sedici2003.fecha-disponibilidad = true;
-metadata.hide.sedici2003.fecha-hora-actualizacion = true;
-metadata.hide.sedici2003.fecha-hora-creacion = true;
-metadata.hide.sedici2003.tipo-documento = true;
-metadata.hide.sedici2003.estado = true;
-metadata.hide.sedici2003.owner = true;
-metadata.hide.sedici2003.descargas = true;
-metadata.hide.sedici2003.asesor = true;
-metadata.hide.sedici2003.autoarchivo = true;
-metadata.hide.sedici2003.autor = true;
-metadata.hide.sedici2003.autor-institucional = true;
-metadata.hide.sedici2003.codirector-tesis = true;
-metadata.hide.sedici2003.colaboradores = true;
-metadata.hide.sedici2003.comite-redaccion = true;
-metadata.hide.sedici2003.comite-referato = true;
-metadata.hide.sedici2003.comite-editorial = true;
-metadata.hide.sedici2003.comite-organizador = true;
-metadata.hide.sedici2003.compilador = true;
-metadata.hide.sedici2003.consejo-asesor = true;
-metadata.hide.sedici2003.consejo-editorial = true;
-metadata.hide.sedici2003.coordinador = true;
-metadata.hide.sedici2003.descripcion-recurso = true;
-metadata.hide.sedici2003.descriptores = true;
-metadata.hide.sedici2003.dimensiones = true;
-metadata.hide.sedici2003.director = true;
-metadata.hide.sedici2003.director-tesis = true;
-metadata.hide.sedici2003.dossier = true;
-metadata.hide.sedici2003.editor = true;
-metadata.hide.sedici2003.editor-seccion-libros = true;
-metadata.hide.sedici2003.editor-Dossier = true;
-metadata.hide.sedici2003.editorial = true;
-metadata.hide.sedici2003.entidad-origen = true;
-metadata.hide.sedici2003.evento = true;
-metadata.hide.sedici2003.fecha = true;
-metadata.hide.sedici2003.fecha-presentacion = true;
-metadata.hide.sedici2003.fecha-publicacion = true;
-metadata.hide.sedici2003.frecuencia = true;
-metadata.hide.sedici2003.fulltext = true;
-metadata.hide.sedici2003.grado-alcanzado = true;
-metadata.hide.sedici2003.identificadores-geograficos = true;
-metadata.hide.sedici2003.idioma = true;
-metadata.hide.sedici2003.institucion-otorgante = true;
-metadata.hide.sedici2003.isbn = true;
-metadata.hide.sedici2003.issn = true;
-metadata.hide.sedici2003.jurado = true;
-metadata.hide.sedici2003.licencia = true;
-metadata.hide.sedici2003.localizacion-electronica = true;
-metadata.hide.sedici2003.localizacion-fisica = true;
-metadata.hide.sedici2003.lugar = true;
-metadata.hide.sedici2003.lugar-desarrollo = true;
-metadata.hide.sedici2003.materias = true;
-metadata.hide.sedici2003.nombre-evento = true;
-metadata.hide.sedici2003.notas = true;
-metadata.hide.sedici2003.numero-serie = true;
-metadata.hide.sedici2003.numero-patente = true;
-metadata.hide.sedici2003.metadato-pais = true;
-metadata.hide.sedici2003.palabras-clave = true;
-metadata.hide.sedici2003.metadato-tipo-documento = true;
-metadata.hide.sedici2003.revisado-pares = true;
-metadata.hide.sedici2003.revista-indizada = true;
-metadata.hide.sedici2003.secretaria-redaccion = true;
-metadata.hide.sedici2003.subdirector = true;
-metadata.hide.sedici2003.subtitulo = true;
-metadata.hide.sedici2003.tecnica = true;
-metadata.hide.sedici2003.titulo-documento = true;
-metadata.hide.sedici2003.titulo-idioma-original = true;
-metadata.hide.sedici2003.traductor = true;
-metadata.hide.sedici2003.verificacion-referatos = true;
-metadata.hide.sedici2003.asesor = true;
-metadata.hide.sedici2003.tecnica = true;
-metadata.hide.sedici2003.ultima-revision = true;
-metadata.hide.sedici2003.coordinador = true;
-metadata.hide.sedici2003.titulo-serie = true;
-metadata.hide.sedici2003.subtitulo-serie = true;
+metadata.hide.sedici2003.padre = true
+metadata.hide.sedici2003.abstract = true
+metadata.hide.sedici2003.pais = true
+metadata.hide.sedici2003.institucion = true
+metadata.hide.sedici2003.dependencia = true
+metadata.hide.sedici2003.unidad = true
+metadata.hide.sedici2003.fecha-disponibilidad = true
+metadata.hide.sedici2003.fecha-hora-actualizacion = true
+metadata.hide.sedici2003.fecha-hora-creacion = true
+metadata.hide.sedici2003.tipo-documento = true
+metadata.hide.sedici2003.estado = true
+metadata.hide.sedici2003.owner = true
+metadata.hide.sedici2003.descargas = true
+metadata.hide.sedici2003.asesor = true
+metadata.hide.sedici2003.autoarchivo = true
+metadata.hide.sedici2003.autor = true
+metadata.hide.sedici2003.autor-institucional = true
+metadata.hide.sedici2003.codirector-tesis = true
+metadata.hide.sedici2003.colaboradores = true
+metadata.hide.sedici2003.comite-redaccion = true
+metadata.hide.sedici2003.comite-referato = true
+metadata.hide.sedici2003.comite-editorial = true
+metadata.hide.sedici2003.comite-organizador = true
+metadata.hide.sedici2003.compilador = true
+metadata.hide.sedici2003.consejo-asesor = true
+metadata.hide.sedici2003.consejo-editorial = true
+metadata.hide.sedici2003.coordinador = true
+metadata.hide.sedici2003.descripcion-recurso = true
+metadata.hide.sedici2003.descriptores = true
+metadata.hide.sedici2003.dimensiones = true
+metadata.hide.sedici2003.director = true
+metadata.hide.sedici2003.director-tesis = true
+metadata.hide.sedici2003.dossier = true
+metadata.hide.sedici2003.editor = true
+metadata.hide.sedici2003.editor-seccion-libros = true
+metadata.hide.sedici2003.editor-Dossier = true
+metadata.hide.sedici2003.editorial = true
+metadata.hide.sedici2003.entidad-origen = true
+metadata.hide.sedici2003.evento = true
+metadata.hide.sedici2003.fecha = true
+metadata.hide.sedici2003.fecha-presentacion = true
+metadata.hide.sedici2003.fecha-publicacion = true
+metadata.hide.sedici2003.frecuencia = true
+metadata.hide.sedici2003.fulltext = true
+metadata.hide.sedici2003.grado-alcanzado = true
+metadata.hide.sedici2003.identificadores-geograficos = true
+metadata.hide.sedici2003.idioma = true
+metadata.hide.sedici2003.institucion-otorgante = true
+metadata.hide.sedici2003.isbn = true
+metadata.hide.sedici2003.issn = true
+metadata.hide.sedici2003.jurado = true
+metadata.hide.sedici2003.licencia = true
+metadata.hide.sedici2003.localizacion-electronica = true
+metadata.hide.sedici2003.localizacion-fisica = true
+metadata.hide.sedici2003.lugar = true
+metadata.hide.sedici2003.lugar-desarrollo = true
+metadata.hide.sedici2003.materias = true
+metadata.hide.sedici2003.nombre-evento = true
+metadata.hide.sedici2003.notas = true
+metadata.hide.sedici2003.numero-serie = true
+metadata.hide.sedici2003.numero-patente = true
+metadata.hide.sedici2003.metadato-pais = true
+metadata.hide.sedici2003.palabras-clave = true
+metadata.hide.sedici2003.metadato-tipo-documento = true
+metadata.hide.sedici2003.revisado-pares = true
+metadata.hide.sedici2003.revista-indizada = true
+metadata.hide.sedici2003.secretaria-redaccion = true
+metadata.hide.sedici2003.subdirector = true
+metadata.hide.sedici2003.subtitulo = true
+metadata.hide.sedici2003.tecnica = true
+metadata.hide.sedici2003.titulo-documento = true
+metadata.hide.sedici2003.titulo-idioma-original = true
+metadata.hide.sedici2003.traductor = true
+metadata.hide.sedici2003.verificacion-referatos = true
+metadata.hide.sedici2003.asesor = true
+metadata.hide.sedici2003.tecnica = true
+metadata.hide.sedici2003.ultima-revision = true
+metadata.hide.sedici2003.coordinador = true
+metadata.hide.sedici2003.titulo-serie = true
+metadata.hide.sedici2003.subtitulo-serie = true
 
 ##### Settings for Submission Process #####
 
