-#6799 Hago que el metadato sedici.subject.ford sea controlado por autoridad
	Agego la configuración correspondiente en dspace.cfg para que el campo se conecte con drupal y sugiera valores de la clasificación FORD al momento de llenar el campo en el submission.

--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -1818,6 +1818,13 @@ sedici.choices.jerarquias.filter.sedici.subject.materias = 5
 sedici.choices.jerarquias.include_childs.sedici.subject.materias = true
 sedici.choices.typeProperty.sedici.subject.materias = sedici:Materia
 
+choices.plugin.sedici.subject.ford = SubjectAuthority
+choices.presentation.sedici.subject.ford = suggest
+authority.controlled.sedici.subject.ford = true
+choices.closed.sedici.subject.ford = true
+sedici.choices.externalKeyProperty.sedici.subject.ford = owl:sameAs
+sedici.choices.typeProperty.sedici.subject.ford = sedici:FORD
+
 choices.plugin.dc.subject = SubjectAuthority
 choices.presentation.dc.subject = suggest
 authority.controlled.dc.subject = true
