--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -801,7 +801,7 @@ registry.metadata.load = dspace-types.xml
 # can login as another user from the "edit eperson" page. This is useful for
 # debugging problems in a running dspace instance, especially in the workflow
 # process. The default value is false, i.e. no one may assume the login of another user.
-#webui.user.assumelogin = true
+webui.user.assumelogin = true
 
 # whether to display the contents of the licence bundle (often just the deposit
 # licence in standard DSpace installation
@@ -1140,7 +1140,7 @@ webui.strengths.show = false
 # For compatibility with previous versions:
 #
 webui.browse.index.1 = dateissued:item:dateissued
-webui.browse.index.2 = author:metadata:dc.contributor.*\,dc.creator:text
+webui.browse.index.2 = author:metadata:dc.contributor.*\,dc.creator\,sedici.creator.*:text
 webui.browse.index.3 = title:item:title
 webui.browse.index.4 = subject:metadata:dc.subject.*:text
 #webui.browse.index.5 = dateaccessioned:item:dateaccessioned
@@ -2093,6 +2093,7 @@ include = ${module_dir}/fetchccdata.cfg
 include = ${module_dir}/google-analytics.cfg
 include = ${module_dir}/healthcheck.cfg
 include = ${module_dir}/oai.cfg
+include = ${module_dir}/person-statistics.cfg
 include = ${module_dir}/publication-lookup.cfg
 include = ${module_dir}/rdf.cfg
 include = ${module_dir}/rest.cfg
