Cambio en la configuracion los metadatos usados para la estadistica de red de coautores de una persona. 	De esta manera solo quedarán en la red los autores con perfiles de autor

--- a/dspace/config/modules/person-statistics.cfg
+++ b/dspace/config/modules/person-statistics.cfg
@@ -5,8 +5,8 @@
 #---------------------------------------------------------------#
 
 # List of metadata used to get all coauthor from a person
-person.statistics.coauthors-metadata=dc.contributor.author,dc.creator,dc.contributor,sedici.creator.*
-
+# person.statistics.coauthors-metadata=dc.contributor.author,dc.creator,dc.contributor,sedici.creator.*,sedici.contributor.*
+person.statistics.coauthors-metadata=dc.contributor.author
 # List of metadata used to get the year of the publication of a person
 person.statistics.pubtime-metadata=dc.date.issued
 
