--- a/dspace/config/modules/sedici-dspace.cfg
+++ b/dspace/config/modules/sedici-dspace.cfg
@@ -59,6 +59,7 @@ http://creativecommons.org/licenses/by-nd/4.0/ = Creative Commons Attribution-No
 http://creativecommons.org/licenses/by-sa/4.0/ =  Creative Commons Attribution-ShareAlike 4.0 International (CC BY-SA 4.0),\
 http://creativecommons.org/licenses/by/4.0/ = Creative Commons Attribution 4.0 International (CC BY 4.0),\
 http://creativecommons.org/publicdomain/mark/1.0/ = Creative Commons Public Domain Mark (PDM),\
+https://creativecommons.org/publicdomain/zero/1.0/deed.es = CC0 1.0 Universal (CC0 1.0) Dedicación de Dominio Público,\
 https://opendatacommons.org/licenses/odbl/1-0/ = Open Data Commons Open Database License (ODbL) v1.0,\
 https://opendatacommons.org/licenses/by/1-0/ = Open Data Commons Attribution License (ODC-By) v1.0,\
 https://opendatacommons.org/licenses/pddl/1-0/ = Open Data Commons Public Domain Dedication and License (PDDL) v1.0
