7002 Se habilitó "useProxies" para registrar descargas en Google Analytics
 Se registran las descargas a partir de la última IP, que no sea la de un proxy
 conocido, a paritir de las IPs que vienen en el X-Forwarded-For.
 El código agregado esta basado en DSpace 6. Hay un comentario para borrar ese código
 cuando se migre.

--- a/dspace/config/dspace.cfg
+++ b/dspace/config/dspace.cfg
@@ -230,7 +230,16 @@ log.dir = ${dspace.dir}/log
 
 # If enabled, the logging and the Solr statistics system will look for
 # an X-Forwarded-For header. If it finds it, it will use this for the user IP address
-#useProxies = true
+useProxies = true
+
+# If "useProxies" is enabled, the authentication and statistics logging code will read the X-Forwarded-For header in
+# order to determine the correct client IP address. But they will only use that header value when the request is coming
+# from a trusted proxy server location (e.g. HTTPD on localhost). Leave this property empty to trust X-Forwarded-For
+# values of all requests. You can specify a range by only listing the first three ip-address blocks, e.g. 128.177.243
+# You can list multiple IP addresses or ranges by comma-separating them.
+# If you are running REST & UI on different servers, you should add the UI servers (range) as a proxy.
+# For example : proxies.trusted.ipranges = 127.0.0.1, 192.168.2
+proxies.trusted.ipranges = 127.0.0.1,192.168.2,163.10.34.147
 
 ##### DOI registration agency credentials ######
 # To mint DOIs you have to use a DOI registration agency like DataCite. Several
