7058 Ignoro info de autohority para sedici.creator.* sedici.contributor.*

--- a/dspace/config/modules/discovery.cfg
+++ b/dspace/config/modules/discovery.cfg
@@ -24,3 +24,5 @@ index.projection=dc.title,dc.contributor.*,dc.date.issued
 #	 Processors plugin in the dspace.cfg
 
 index.authority.ignore.dc.subject=true
+index.authority.ignore.sedici.creator.*=true
+index.authority.ignore.sedici.contributor.*=true
