8557 Creo clase con codigo que envia un video a youtube 	Se deriva del codigo demo que ofrece google para java 	Por ahora solo envía videos que esten en un directorio especifico del filesystem

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ META-INF/
 
 ##Omito los datos relativos a la configuración local de dspace
 install/
+
+# Omito las credenciales de google api
+client_secrets.json
