7058 ingore index de sedici.contributor.* y sedici.creator.*

--- a/dspace/config/modules/discovery.cfg
+++ b/dspace/config/modules/discovery.cfg
@@ -24,5 +24,9 @@ index.projection=dc.title,dc.contributor.*,dc.date.issued
 #	 Processors plugin in the dspace.cfg
 
 index.authority.ignore.dc.subject=true
-index.authority.ignore.sedici.creator.*=true
-index.authority.ignore.sedici.contributor.*=true
+index.authority.ignore.sedici.creator.person=true
+index.authority.ignore.sedici.creator.corporate=true
+index.authority.ignore.sedici.contributor.translator=true
+index.authority.ignore.sedici.contributor.compiler=true
+index.authority.ignore.sedici.contributor.editor=true
+index.authority.ignore.sedici.creator.interprete=true
